sumo/tests/sumo/output/vtypeprobe/errors/id_empty/errors.sumo
Error: Missing id of a vtypeprobe-object.
Quitting (on error).
